--- a/harvard/templates/harvard/news.html
+++ b/harvard/templates/harvard/news.html
@@ -14,14 +14,131 @@
 <tr><th>Publication</th><th>Topics</th></tr>
 
 <tr>
+<td><strong>An unbiased index to quantify participant's phenotypic contribution to an open-access cohort</strong><br />
+Chan Y, Tung M, Garruss AS, Zaranek SW, Chan YK, Lunshof JE, Zaranek AW, Ball MP, Chou MF, Lim ET, Church GM.
+Sci Rep. 2017 Apr 7. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5384003/">full text</a>)</td>
+<td><span class="label label-warning">Computational</span></td>
+</tr>
+
+<tr>
+<td><strong>Association of two synonymous splicing-associated CpG single nucleotide polymorphisms in calpain 10 and solute carrier family 2 member 2 with type 2 diabetes</strong><br />
+Karambataki M, et al.
+Biomed Rep. Feb 2017. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5351308/">full text</a>)</p></td>
+<td><p><span class="label label-success">Biodiscovery</span></p><p><span class="label label-warning">Computational</span></p></span></td>
+</tr>
+
+<tr>
+<td><strong>An ethnically relevant consensus Korean reference genome is a step towards personal reference genomes</strong><br />
+Cho YS, Kim H, Kim HM, Jho S, Jun J, Lee YJ, Chae KS, Kim CG, Kim S, Eriksson A, Edwards JS, Lee S, Kim BC, Manica A, Oh TK, Church GM, Bhak J.
+Nat Commun. 2016 Nov 24. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5123046/">full text</a>)</p></td>
+<td><p><span class="label label-warning">Computational</span></p></td>
+</tr>
+
+<tr>
+<td><strong>The whole genome sequences and experimentally phased haplotypes of over 100 personal genomes</strong><br />
+Mao Q, Ciotlos S, Zhang RY, Ball MP, Chin R, Carnevali P, Barua N, Nguyen S, Agarwal MR, Clegg T, Connelly A, Vandewege W, Zaranek AW, Estep PW, Church GM, Drmanac R, Peters BA.
+Gigascience. 2016 Oct 11. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5057367/">full text</a>)</td>
+<td><p><span class="label label-inverse">Biotechnology</span></p><p><span class="label label-warning">Computational</span></p></span></td>
+</tr>
+
+<tr>
+<td><strong>PALME: PAtients Like My gEnome.</strong><br />
+Wang L, et al.
+AMIA Jt Summits Transl Sci Proc. 2016 Jul 20. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5001758/">full text</a>)</p></td>
+<td><p><span class="label label-warning">Computational</span></p></span></td>
+</tr>
+
+<tr>
+<td><strong>Extensive sequencing of seven human genomes to characterize benchmark reference materials</strong><br />
+Zook JM, Catoe D, McDaniel J, Vang L, Spies N, Sidow A, Weng Z, Liu Y, Mason CE, Alexander N, Henaff E, McIntyre AB,
+Chandramohan D, Chen F, Jaeger E, Moshrefi A, Pham K, Stedman W, Liang T, Saghbini M, Dzakula Z, Hastie A, Cao H,
+Deikus G, Schadt E, Sebra R, Bashir A, Truty RM, Chang CC, Gulbahce N, Zhao K, Ghosh S, Hyland F, Fu Y, Chaisson M,
+Xiao C, Trow J, Sherry ST, Zaranek AW, Ball M, Bobe J, Estep P, Church GM, Marks P, Kyriazopoulou-Panagiotopoulou S,
+Zheng GX, Schnall-Levin M, Ordonez HS, Mudivarti PA, Giorda K, Sheng Y, Rypdal KB, Salit M.
+Sci Data. 2016 Jun 7. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4896128/">full text</a>)</td>
+<td><p><span class="label label-inverse">Biotechnology</span></p><p><span class="label label-warning">Computational</span></p></span></td>
+</tr>
+
+<tr>
+<td><strong>Balancing Benefits and Risks of Immortal Data: Participants' Views of Open Consent in the Personal Genome Project</strong><br />
+Zarate OA, Brody JG, Brown P, Ramirez-Andreotta MD, Perovich L, Matz J.
+Hastings Cent Rep. 2016 Jan-Feb. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4871108/">full text</a>)</td>
+<td><p><span class="label label-info">Bioethics</span></p></td>
+</tr>
+
+<tr>
+<td><strong>Privacy Risks from Genomic Data-Sharing Beacons.</strong><br />
+Shringarpure SS, Bustamante CD.
+Am J Hum Genet. 2015 Nov 5. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4667107/">full text</a>)</td>
+<td><p><span class="label label-info">Bioethics</span></p><p><span class="label label-warning">Computational</span></p></span></td>
+</tr>
+
+<tr>
+<td><strong>
+  Quality control metrics improve repeatability and reproducibility of single-nucleotide variants derived from whole-genome sequencing
+</strong><br/>
+Zhang W, et al.
+Pharmacogenomics J. 2015 Aug.</td>
+<td><p><span class="label label-warning">Computational</span></p></td>
+</tr>
+
+<tr>
+<td><strong>A community assessment of privacy preserving techniques for human genomes.</strong><br/>
+Jiang X, et al.
+BMC Med Inform Decis Mak. 2014 Dec 8. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4290799/">full text</a>)</td>
+<td><p><span class="label label-warning">Computational</span></p></td>
+</tr>
+
+<tr>
+<td><strong>Whole genome sequencing of 35 individuals provides insights into the genetic architecture of Korean population</strong><br />
+Zhang W, et al.
+BMC Bioinformatics. 2014 Oct 21. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4251052/">full text</a>)</p></td>
+<td><span class="label label-warning">Computational</span></td>
+</tr>
+
+<tr>
+<td><strong>
+  VAS: a convenient web portal for efficient integration of genomic features with millions of genetic variants.
+</strong><br/>
+Ho ED, et al.
+BMC Genomics. 2014 Oct 11. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4210471/">full text</a>)</p></td>
+<td><span class="label label-warning">Computational</span></td>
+</tr>
+
+<tr>
+<td><strong>
+  A probabilistic model to predict clinical phenotypic traits from genome sequencing.
+</strong><br/>
+Chen YC, et al.
+PLoS Comput Biol. 2014 Sep 4. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4154636/">full text</a>)</p></td>
+<td><span class="label label-warning">Computational</span></td>
+</tr>
+
+<tr>
+<td><strong>Harvard Personal Genome Project: lessons from participatory public research.</strong><br />
+Ball MP, Bobe JR, Chou MF, Clegg T, Estep PW, Lunshof JE, Vandewege W, Zaranek A, Church GM.
+Genome Med. 2014 Feb 28. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3978420/">full text</a>)</p></td>
+<td><span class="label label-info">Bioethics</span></td>
+</tr>
+
+<tr>
+<td><strong>PATH-SCAN: a reporting tool for identifying clinically actionable variants.</strong><br />
+Daneshjou R, Zappala Z, Kukurba K, Boyle SM, Ormond KE, Klein TE, Snyder M, Bustamante CD, Altman RB, Montgomery SB.
+Pac Symp Biocomput. 2014. (<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4008882/">full text</a>)</p></td>
+<td><span class="label label-warning">Computational</span></td>
+</tr>
+
+<tr>
 <td><strong>Raw Personal Data: Providing Access</strong><br />
-Lunshof JE, Church GM, Prainsack B. 2014 Jan 24. (<a href="http://www.sciencemag.org/content/343/6169/373.full">full text</a>)</p></td>
+Lunshof JE, Church GM, Prainsack B.
+Science. 2014 Jan 24. (<a href="http://www.sciencemag.org/content/343/6169/373.full">full text</a>)</p></td>
 <td><span class="label label-info">Bioethics</span></td>
 </tr>
 
 <tr>
 <td><strong>Optimization of Scarless Human Stem Cell Genome Editing</strong></br />
-Yang L, Guell M, Byrne S, Yang JL, De Los Angeles A, Mali P, Aach J, Kim-Kiselak C, Briggs AW, Rios X, Huang PY, Daley G, Church G. Nucleic Acids Res. 2013 Jul 31. (<a href="http://nar.oxfordjournals.org/content/early/2013/07/31/nar.gkt555.full.pdf">PDF</a>)</p></td>
+Yang L, Guell M, Byrne S, Yang JL, De Los Angeles A, Mali P, Aach J, Kim-Kiselak C, Briggs AW, Rios X, Huang PY, Daley G, Church G.
+Nucleic Acids Res. 2013 Jul 31. (<a href="http://nar.oxfordjournals.org/content/early/2013/07/31/nar.gkt555.full.pdf">PDF</a>)</p></td>
 <td><span class="label label-inverse">Biotechnology</span></td>
 </tr>
 
