Fix display issues

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,7 @@
             <li><a href="/#projects">Overview</a></li>
             <li><a href="/#project-guidelines">Guidelines</a></li>
             <li role="separator" class="divider"></li>
+            <li class="dropdown-header">Project websites</li>
             <li><a href="https://pgp.med.harvard.edu/">Harvard PGP</a></li>
             <li><a href="https://personalgenomes.ca/">PGP Canada</a></li>
             <li><a href="https://www.personalgenomes.org.uk/">PGP UK</a></li>
