Highlight local sites instead of redirect

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,9 +18,9 @@
             role="button" aria-haspopup="true" aria-expanded="false">
             Projects <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/#about">About</a></li>
-            <li><a href="/#projects">Overview</a></li>
-            <li><a href="/#project-guidelines">Guidelines</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Overview</a></li>
+            <li><a href="#project-guidelines">Guidelines</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Project websites</li>
             <li><a href="https://pgp.med.harvard.edu/">Harvard PGP</a></li>
@@ -29,8 +29,8 @@
             <li><a href="http://genomaustria.at/das-projekt/">Genom Austria</a></li>
           </ul>
         </li>
-        <li><a href="/#news">News</a></li>
-        <li><a href="/#contact">Contact</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
