--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,6 +9,16 @@ body {
 .lead-div {
   margin-top: 30px;
 }
+.local-projects {
+  border-color: #0080e0;
+  border-radius: 6px;
+  border-style: solid;
+  padding: 15px;
+}
+.local-projects-header {
+  color: #0080e0;
+  font-variant: small-caps;
+}
 li {
   margin-bottom: 20px;
 }
