--- a/_includes/pgp-uk.html
+++ b/_includes/pgp-uk.html
@@ -1,6 +1,6 @@
 <h3>PGP UK (United Kingdom)</h3>
 <p>
-  Founded in November 2013, PGP UK is based  by Stephen Beck at
+  Founded in November 2013, PGP UK is led by Stephen Beck at
   University College London.
 </p>
 <a class="btn btn-default" href="https://www.personalgenomes.org.uk/">
