--- a/_includes/international-projects.html
+++ b/_includes/international-projects.html
@@ -19,15 +19,12 @@
       {% include pgp-uk.html %}
     </li>
 
-    <li style="z-index:1000">
-      <h3>Genom Austria (Austria)</h3>
-      <p>
-        Founded in November 2014, Genom Austria is based at the CeMM
-        Research Center for Molecular Medicine of the Austrian
-        Academy of Sciences.
-      </p>
-      <a class="btn btn-default" href="http://genomaustria.at/das-projekt/">
-        Go to Genom Austria website (German language)</a>
+    <li>
+      {% include genom-austria.html %}
+    </li>
+
+    <li>
+      {% include pgp-china.html %}
     </li>
 
   </ul>
