Fix missing link tag closure

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,8 +3,8 @@
   <li>
     <strong>The Personal Genome Project Canada: findings from whole genome sequences of the inaugural 56 participants.</strong>
 Miriam S. Reuter, Susan Walker, Bhooma Thiruvahindrapuram, Joe Whitney, Iris Cohn, Neal Sondheimer, Ryan K.C. Yuen, Bret.t Trost, Tara A. Paton, Sergio L. Pereira, Jo-Anne Herbrick, Richard F. Wintle, Daniele Merico, Jennifer Howe, Jeffrey R. MacDonald, Chao Lu, Thomas Nalpathamkalam, Wilson W.L. Sung, Zhuozhi Wang, Rohan V. Patel, Giovanna Pellecchia, John Wei, Lisa J. Strug, Sherilyn Bell, Barbara Kellam, Melanie M. Mahtani, Anne S. Bassett, Yvonne Bombard, Rosanna Weksberg, Cheryl Shuman, Ronald D. Cohn, Dimitri J. Stavropoulos, Sarah Bowdin, Matthew R. Hildebrandt, Wei Wei, Asli Romm, Peter Pasceri, James Ellis, Peter Ray, M. Stephen Meyn, Nasim Monfared, S. Mohsen Hosseini, Ann M. Joseph-George, Fred W. Keeley, Ryan A. Cook, Marc Fiume, Hin C. Lee, Christian R. Marshall, Jill Davies, Allison Hazell, Janet A. Buchanan, Michael J. Szego, Stephen W. Scherer
-CMAJ Feb 2018, 190 (5) E126-E136; DOI: 10.1503/cmaj.171151 (<a href="http://www.cmaj.ca/content/190/5/E126">full text</a)
-    </li>
+CMAJ Feb 2018, 190 (5) E126-E136; DOI: 10.1503/cmaj.171151 (<a href="http://www.cmaj.ca/content/190/5/E126">full text</a>)
+  </li>
 </ul>
 
 
