--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,5 +1,10 @@
 <h3>2018</h3>
 <ul>
+  <li><strong>PGP-UK: a research and citizen science hybrid project in support of personalized medicine.</strong> Stephan Beck, Alison M Berner, Graham Bignell, Maggie Bond, Martin J Callanan, Olga Chervova, Lucia Conde, Manuel Corpas, Simone Ecker, Hannah R Elliott, Silvana A Fioramonti, Adrienne M Flanagan, Ricarda Gaentzsch, David Graham, Deirdre Gribbin, Jose Afonso Guerra-Assuncao, Rifat Hamoudi, Vincent Harding, Paul L Harrison, Javier Herrero, Jana Hofmann, Erica Jones, Saif Khan, Jane Kaye, Polly Kerr, Emanuele Libertini, Laura McCormack, Ismail Moghul, Nikolas Pontikos, Sharmini Rajanayagam, Kirti Rana, Momodou Semega-Janneh, Colin P Smith, Louise Strom, Sevgi Urmur, Amy P Webster, Karen Wint, John N Wood.
+    BioRxiv preprint. March 2018. (<a href="https://www.biorxiv.org/content/early/2018/03/27/288829">full text</a>)
+  </li>
+</ul>
+<ul>
   <li>
     <strong>The Personal Genome Project Canada: findings from whole genome sequences of the inaugural 56 participants.</strong>
 Miriam S. Reuter, Susan Walker, Bhooma Thiruvahindrapuram, Joe Whitney, Iris Cohn, Neal Sondheimer, Ryan K.C. Yuen, Bret.t Trost, Tara A. Paton, Sergio L. Pereira, Jo-Anne Herbrick, Richard F. Wintle, Daniele Merico, Jennifer Howe, Jeffrey R. MacDonald, Chao Lu, Thomas Nalpathamkalam, Wilson W.L. Sung, Zhuozhi Wang, Rohan V. Patel, Giovanna Pellecchia, John Wei, Lisa J. Strug, Sherilyn Bell, Barbara Kellam, Melanie M. Mahtani, Anne S. Bassett, Yvonne Bombard, Rosanna Weksberg, Cheryl Shuman, Ronald D. Cohn, Dimitri J. Stavropoulos, Sarah Bowdin, Matthew R. Hildebrandt, Wei Wei, Asli Romm, Peter Pasceri, James Ellis, Peter Ray, M. Stephen Meyn, Nasim Monfared, S. Mohsen Hosseini, Ann M. Joseph-George, Fred W. Keeley, Ryan A. Cook, Marc Fiume, Hin C. Lee, Christian R. Marshall, Jill Davies, Allison Hazell, Janet A. Buchanan, Michael J. Szego, Stephen W. Scherer
